# leggal-chat

./: .dockerignore  .gitignore  ARCHITECTURE.md  DECISIONS.md  Dockerfile  LICENSE  README.md  SECURITY.md  TESTING.md  check-system.sh  docker-compose.yml  env.example  start.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: alembic.ini  constants.py  main.py
backend/app/alembic/: env.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: models.py  schemas.py
backend/app/routers/: ai.py  auth.py  chat.py  tasks.py  webhook.py
backend/app/services/: ai_service.py  auth_service.py  task_service.py  webhook_service.py
backend/app/utils/: helpers.py  seed.py
backend/scripts/: init.py  test_api.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: Header.tsx  Logo.tsx
frontend/src/constants/: priorities.ts
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  TasksPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
scripts/: clean.sh
